cspm/cspm-platform/services/inventory-collector/output/588989875114/ap-southeast-1/ec2_147/describe_network_acls/describe_network_acls_output_20250603_145502.json
{
  "NetworkAcls": [
    {
      "Associations": [],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": true,
      "NetworkAclId": "acl-0d238e2221bec3bed",
      "Tags": [],
      "VpcId": "vpc-055c56205d4dc49ad",
      "OwnerId": "588989875114"
    },
    {
      "Associations": [],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": true,
      "NetworkAclId": "acl-00f322a33fed90a0f",
      "Tags": [],
      "VpcId": "vpc-081bceb99e38de4fa",
      "OwnerId": "588989875114"
    },
    {
      "Associations": [
        {
          "NetworkAclAssociationId": "aclassoc-00eaceb0c0219488d",
          "NetworkAclId": "acl-0b4ae8979149e5fa6",
          "SubnetId": "subnet-076c0fe2645e64186"
        },
        {
          "NetworkAclAssociationId": "aclassoc-00ece766e5bf5136f",
          "NetworkAclId": "acl-0b4ae8979149e5fa6",
          "SubnetId": "subnet-0ea0806c7694a012c"
        },
        {
          "NetworkAclAssociationId": "aclassoc-0b7ed9b8d9d00aaeb",
          "NetworkAclId": "acl-0b4ae8979149e5fa6",
          "SubnetId": "subnet-04b51ca68f93641d4"
        },
        {
          "NetworkAclAssociationId": "aclassoc-01e5fe21ff472acb5",
          "NetworkAclId": "acl-0b4ae8979149e5fa6",
          "SubnetId": "subnet-060ed6b2e863995ba"
        }
      ],
      "Entries": [
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": true,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "allow",
          "RuleNumber": 100
        },
        {
          "CidrBlock": "0.0.0.0/0",
          "Egress": false,
          "Protocol": "-1",
          "RuleAction": "deny",
          "RuleNumber": 32767
        }
      ],
      "IsDefault": true,
      "NetworkAclId": "acl-0b4ae8979149e5fa6",
      "Tags": [],
      "VpcId": "vpc-0796a51fd6cb81118",
      "OwnerId": "588989875114"
    }
  ],
  "ResponseMetadata": {
    "RequestId": "ebc38a66-ac4e-4665-9e1a-1465a0148bc0",
    "HTTPStatusCode": 200,
    "HTTPHeaders": {
      "x-amzn-requestid": "ebc38a66-ac4e-4665-9e1a-1465a0148bc0",
      "cache-control": "no-cache, no-store",
      "strict-transport-security": "max-age=31536000; includeSubDomains",
      "vary": "accept-encoding",
      "content-type": "text/xml;charset=UTF-8",
      "content-length": "3369",
      "date": "Tue, 03 Jun 2025 14:55:16 GMT",
      "server": "AmazonEC2"
    },
    "RetryAttempts": 0
  }
}
